--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>My projects</title>
 </head>
 <body>
-  <header></header>
+  <header>Header</header>
   <main></main>
   <footer></footer>
 </body>
